--- a/formulário.html
+++ b/formulário.html
@@ -12,7 +12,7 @@
     <nav class="nav-conteplado">
         <img class="img-conteplado" src="logo-removebg-preview.png" alt="" srcset="">
         <div class="conteudo-conteplado">
-        <a class="conteudo-conteplado-conteudo" href="">Home</a>
+        <a class="conteudo-conteplado-conteudo" href="index.html">Home</a>
         <a class="conteudo-conteplado-conteudo" href="formulário.html">Formulário</a>
         <a class="conteudo-conteplado-conteudo" href="">Cursos</a>
         </div>
