--- a/index.html
+++ b/index.html
@@ -18,17 +18,9 @@
         <a class="conteudo-conteplado-conteudo" href="">Cursos</a>
         </div>
     </nav>
-    <div class="conteudo-principal-conteplado">
-        <div class="conteudo-principal-conteplado-texto">
-            <h2>
-                Parabéns estudante, ficamos muito felizes em informar que acaba de ganhar uma <strong>bolsa de 50%</strong> na nossa instituição, sua bolsa tem validade de uma hora, o seu orientador irá dar continuar com seu processo.
-            </h2>
 
-        </div>
-        <div class="conteudo-principal-conteplado-imagem">
-            <img class="img-estudante" src="imagem-estudante-removebg-preview.png" alt="" srcset="">
-        </div>
+    <script src="scripts.js"></script>
 
-    </div>
 </body>
+
 </html>
