--- a/formulário.html
+++ b/formulário.html
@@ -14,7 +14,7 @@
         <div class="conteudo-conteplado">
         <a class="conteudo-conteplado-conteudo" href="index.html">Home</a>
         <a class="conteudo-conteplado-conteudo" href="formulário.html">Formulário</a>
-        <a class="conteudo-conteplado-conteudo" href="">Cursos</a>
+        <a class="conteudo-conteplado-conteudo" href="cursos.html">Cursos</a>
         </div>
     </nav>
     <div class="conteudo">
