--- a/cursos.html
+++ b/cursos.html
@@ -19,6 +19,20 @@
         </div>
     </nav>
 
+<head>
+    <div class="conteudo-principal-conteplado">
+        <div class="conteudo-principal-conteplado-texto">
+            <h1 class="h1cursos">Gestão Administrativa</h1>
+            <h2>
+                Desenvolver as habilidades e competências referentes noções de administração, aprender sobre as rotinas administrativas nas empresas públicas e privadas, aplicar conceitos estudados no dia a dia como auxiliar administrativo, secretariado, departamento pessoal e contabilidade.
+            </h2>
+
+        </div>
+        <div class="conteudo-principal-conteplado-imagem">
+            <img class="img-estudante" src="curso adm.png" alt="" srcset="">
+        </div>
+</head>
+
     <script src="scripts.js"></script>
 
 </body>
