--- a/conteplado.html
+++ b/conteplado.html
@@ -11,17 +11,13 @@
 </head>
 <body>
     <nav class="nav-conteplado">
-        <img class="img-conteplado" src="destaque-removebg-preview.png" alt="" srcset="">
-        <div class="conteudo-conteplado">
-        <a class="conteudo-conteplado-conteudo" href="index.html">Home</a>
-        <a class="conteudo-conteplado-conteudo" href="formulário.html">Formulário</a>
-        <a class="conteudo-conteplado-conteudo" href="cursos.html">Cursos</a>
-        </div>
+        <img class="img-conteplado" src="logo-removebg-preview.png" alt="" srcset="">
+        
     </nav>
     <div class="conteudo-principal-conteplado">
         <div class="conteudo-principal-conteplado-texto">
             <h2>
-                Parabéns estudante, ficamos muito felizes em informar que acaba de ganhar uma <strong>bolsa de 50%</strong> na nossa instituição, sua bolsa tem validade de uma hora, o seu orientador irá dar continuar com seu processo.
+                Parabéns candidato. Após nossos coordenadores analisarem a sua avaliação financeira temos uma excelente notícia pra te dar. Foi aprovada no seu cadastro uma bolsa para um de nossos cursos profissionalizantes com 50% de desconto. Essa bolsa tem validade de 1 (uma) hora. Seu orientador irá dar continuidade ao seu processo.
             </h2>
 
         </div>
