--- a/formulário.html
+++ b/formulário.html
@@ -11,15 +11,14 @@
 <body>
     <nav class="nav-conteplado">
         <img class="img-conteplado" src="logo-removebg-preview.png" alt="" srcset="">
-        <div class="conteudo-conteplado">
-        <a class="conteudo-conteplado-conteudo" href="index.html">Home</a>
-        <a class="conteudo-conteplado-conteudo" href="formulário.html">Formulário</a>
-        <a class="conteudo-conteplado-conteudo" href="cursos.html">Cursos</a>
-        </div>
+        <h3 class="h1-form">Formulário de analise financeira.</h3>
     </nav>
+
+    
+
     <div class="conteudo">
 
-        <p class="conteudo-subtitulo">O preenchimento desse formulário não garatia de aprovação da bolsa</p>
+        <p class="conteudo-subtitulo">O preenchimento desse formulário não é garatia de aprovação da bolsa.</p>
 
         
             <div class="form" class="bold">
@@ -49,7 +48,7 @@
 
             <div class="form">
                 <div class="form">
-                <label class="form-item">Usa algum serviço de streamin? </label>
+                <label class="form-item">Usa algum serviço de Streaming? (Netflix, Amazon Prime, GloboPlay etc.) </label>
                                     <label class="btn-chek">Sim
                                     <input type="radio" checked="checked" name="exist">
                                     <span class="btn-chek"></span>
