--- a/index.html
+++ b/index.html
@@ -26,6 +26,11 @@
                 <input id="candidato" class="form-item-input" type="text" >
             </div>
 
+            <div class="form" class="bold">
+                <div class="form-item" > Data de Nascimento:</div>
+                <input id="candidato" class="form-item-input" type="date" >
+            </div>
+
             <div class="form">
                 <div class="form-item"> Nome do responsável:</div>
                 <input class="form-item-input" type="text" >
@@ -33,6 +38,11 @@
 
             <div class="form">
                 <div class="form-item"> Cidade onde reside:</div>
+                <input class="form-item-input" type="text" >
+            </div>
+
+            <div class="form">
+                <div class="form-item"> Tem acesso ao computador em casa? </div>
                 <input class="form-item-input" type="text" >
             </div>
 
