--- a/index.html
+++ b/index.html
@@ -109,6 +109,21 @@
                 </div>
 
                 <div>
+                    <input class="form-item" type="checkbox" id="horns" name="Agua">
+                    <label for="horns">Conta de Água</label>
+                  </div>
+
+                  <div>
+                    <input class="form-item" type="checkbox" id="horns" name="luz">
+                    <label for="horns">Conta de Luz</label>
+                  </div>
+
+                  <div>
+                    <input class="form-item" type="checkbox" id="horns" name="luz">
+                    <label for="horns">Internet</label>
+                  </div>
+
+                <div>
                     <input class="form-item" type="checkbox" id="horns" name="Cartão de crédito">
                     <label for="horns">Cartão de crédito</label>
                   </div>
