--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
         <h3 class="h1-form">Formulário de analise financeira.</h3>
     </nav>
 
+<div class="conteudo-imagem">
+
     
 
     <div class="conteudo">
@@ -168,7 +170,11 @@
         <button onclick="redirecionar()" class="form-item-btn">Enviar Para Análise</button>
     </div>
 
+    <div >
+        <img class="imagem-pag" src="Inserir um subtítulo.png" alt="imagem conteudo" srcset="">
+    </div>
 
+</div>
      
 <script src="scripts.js"></script>
 
