--- a/conteplado.html
+++ b/conteplado.html
@@ -7,6 +7,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+    <script src="scripts.js"></script>
     
 </head>
 <body>
@@ -26,5 +27,6 @@
         </div>
 
     </div>
+    <h2 id="nomec"></h2>
 </body>
 </html>
