--- a/conteplado.html
+++ b/conteplado.html
@@ -7,7 +7,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
-    <script src="scripts.js"></script>
+    <script src="scripts.js" defer></script>
     
 </head>
 <body>
@@ -17,8 +17,10 @@
     </nav>
     <div class="conteudo-principal-conteplado">
         <div class="conteudo-principal-conteplado-texto">
+            <h2 id="nomec"></h2>
+            <br>
             <h2>
-                Parabéns candidato. Após nossos coordenadores analisarem a sua avaliação financeira temos uma excelente notícia pra te dar. Foi aprovada no seu cadastro uma bolsa para um de nossos cursos profissionalizantes com 50% de desconto. Essa bolsa tem validade de 1 (uma) hora. Seu orientador irá dar continuidade ao seu processo.
+                Após nossos coordenadores analisarem a sua avaliação financeira temos uma excelente notícia pra te dar. Foi aprovada no seu cadastro uma bolsa para um de nossos cursos profissionalizantes com 50% de desconto. Essa bolsa tem validade de 1 (uma) hora. Seu orientador irá dar continuidade ao seu processo.
             </h2>
 
         </div>
@@ -27,6 +29,6 @@
         </div>
 
     </div>
-    <h2 id="nomec"></h2>
+    
 </body>
 </html>
