--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
             <div class="form" class="bold">
                 <div class="form-item" > Data de Nascimento:</div>
-                <input id="candidato" class="form-item-input" type="date" >
+                <input id="candidatoData" class="form-item-input" type="date" >
             </div>
 
             <div class="form">
